fix: fix issue with overlapping text

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -82,5 +82,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 22px; /* 183.333% */
+    word-wrap: break-word;
   }
 }
